--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -2,7 +2,7 @@
     "name": "@teach-pro/shared",
     "version": "1.0.0",
     "private": true,
-    "main": "src/index.ts",
+    "main": "dist/index.js",
     "types": "src/index.ts",
     "scripts": {
         "build": "tsc",
